Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8203196

C1 emits incorrect code due to integer overflow in _tableswitch keys

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2 P2
    • 11
    • 11
    • hotspot
    • 11
    • b15

        We see two test failures with -Xcomp -Xbatch: vm/instr/tableswitch/tableswitch006/tableswitch00610m1/tableswitch00610m1.html and vm/instr/tableswitch/tableswitch006/tableswitch00610m1t/tableswitch00610m1t.html.
        This does not fail if we test with C2 only, nor without -Xcomp, so I assume it's related to C1.

        Find the .jtr file illustrating the failure attached.

         It fails only on linux (ppc, ppcle, s390, x86_64). I see the failures for a while now in our nightly tests of jdk/jdk. We update our jck test suite regularly.

        I could imagine this is related to the gcc version (the only in common to these platforms). We use SUSE gcc48-4.8.5-24.1 on SLES 11.3.



              thartmann Tobias Hartmann
              goetz Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: