8203196: C1 emits incorrect code due to integer overflow in _tableswitch keys

Avoid integer overflow in TableSwitch().

Reviewed-by: goetz, mdoerr, vlivanov